--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quran Caption</title>
+    <title>Quran Video Maker | Create Captivating Quran Videos</title>
+    <meta
+      name="description"
+      content="Create captivating Quran videos effortlessly with our free online Quran Video Maker website. Share the Quran's beauty like never before. Get started now!"
+    />
+    <meta
+      name="keywords"
+      content="Quran, Caption, subtitles, free, online, video, maker, creator, editor, generator, subtitle, easy, free video maker, online creator, easy editing, Quranic content"
+    />
+    <meta
+      name="robots"
+      content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large"
+    />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
