--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/icon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quran Video Maker | Create Captivating Quran Videos</title>
-    <meta
-      name="description"
-      content="Create captivating Quran videos effortlessly with our free online Quran Video Maker website. Share the Quran's beauty like never before. Get started now!"
-    />
-    <meta
-      name="keywords"
-      content="Quran, Caption, subtitles, free, online, video, maker, creator, editor, generator, subtitle, easy, free video maker, online creator, easy editing, Quranic content"
-    />
-    <meta
-      name="robots"
-      content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/apple-touch-icon.png" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon-32x32.png" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png" />
+        <link rel="manifest" href="/site.webmanifest" />
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="theme-color" content="#ffffff" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Quran Video Maker | Create Captivating Quran Videos</title>
+        <meta
+            name="description"
+            content="Create captivating Quran videos effortlessly with our free online Quran Video Maker website. Share the Quran's beauty like never before. Get started now!" />
+        <meta
+            name="keywords"
+            content="Quran, Caption, subtitles, free, online, video, maker, creator, editor, generator, subtitle, easy, free video maker, online creator, easy editing, Quranic content" />
+        <meta
+            name="robots"
+            content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large" />
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
